prometheus/prometheus-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: prometheus-service
  namespace: redhat-openshift-connectors
spec:
  ports:
    - name: prometheus
      protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
  selector:
    app: prometheus
