prometheus/prometheus-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: prometheus-server
  namespace: redhat-openshift-connectors
spec:
  rules:
    - host: prometheus-server
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-service
                port:
                  number: 9090
